     (Vincent Ladeuil, #175886)

   * ``reconfigure`` is able to convert trees into lightweight checkouts.
     (Aaron Bentley)

  DOCUMENTATION:

   * Reference material has now be moved out of the User Guide and added
     to the User Reference. The User Reference has gained 4 sections as
     a result: Authenication Settings, Configuration Settings, Conflicts
     and Hooks. (Ian Clatworthy)

  INTERNALS:

    * Help topics can now be loaded from files. 
      (Ian Clatworthy, Alexander Belchenko)

  API BREAKS:

  TESTING:


bzr 1.0 2007-12-14
==================

  DOCUMENTATION:

   * More improvements and fixes to the User Guide.  (Ian Clatworthy)

   * Add information on cherrypicking/rebasing to the User Guide.
     (Ian Clatworthy)

   * Improve bug tracker integration documentation. (Ian Clatworthy)

   * Minor edits to ``Bazaar in five minutes`` from David Roberts and
     to the rebasing section of the User Guide from Aaron Bentley.
     (Ian Clatworthy)


bzr 1.0rc3 2007-12-11
=====================

  CHANGES:
   
   * If a traceback occurs, users are now asked to report the bug 
     through Launchpad (https://bugs.launchpad.net/bzr/), rather than 
     by mail to the mailing list.
     (Martin Pool)

  BUGFIXES:

   * Fix Makefile rules for doc generation. (Ian Clatworthy, #175207)

   * Give more feedback during long http downloads by making readv deliver data
     as it arrives for urllib, and issue more requests for pycurl. High latency
     networks are better handled by urllib, the pycurl implementation give more
     feedback but also incur more latency.
     (Vincent Ladeuil, #173010)

   * Implement _make_parents_provider on RemoteRepository, allowing generating
     bundles against branches on a smart server.  (Andrew Bennetts, #147836)

  DOCUMENTATION:

   * Improved user guide.  (Ian Clatworthy)

   * The single-page quick reference guide is now available as a PDF.
     (Ian Clatworthy)

  INTERNALS:
