@@ -29,6 +29,7 @@ import bzrlib
 import bzrlib.help
 import bzrlib.help_topics
 import bzrlib.commands
+import bzrlib.osutils
 
 
 def get_filename(options):
@@ -46,26 +47,38 @@ def infogen(options, outfile):
              "timestamp": time.strftime("%Y-%m-%d %H:%M:%S +0000",tt),
              "version": bzrlib.__version__,
              }
+    nominated_filename = options.filename
+    if nominated_filename is None:
+        topic_dir = None
+    else:
+        topic_dir = bzrlib.osutils.dirname(nominated_filename)
     outfile.write(rstx_preamble % params)
     outfile.write(rstx_head % params)
-    outfile.write(_get_body(params))
+    outfile.write(_get_body(params, topic_dir))
     outfile.write(rstx_foot % params)
 
 
-def _get_body(params):
+def _get_body(params, topic_dir):
     """Build the manual content."""
     from bzrlib.help_topics import SECT_CONCEPT, SECT_LIST, SECT_PLUGIN
     registry = bzrlib.help_topics.topic_registry
     result = []
-    result.append(_get_section(registry, SECT_CONCEPT, "Concepts"))
-    result.append(_get_section(registry, SECT_LIST, "Lists"))
+    result.append(_get_section(registry, SECT_CONCEPT, "Concepts",
+        output_dir=topic_dir))
+    result.append(_get_section(registry, SECT_LIST, "Lists",
+        output_dir=topic_dir))
     result.append(_get_commands_section(registry))
-    #result.append(_get_section(registry, SECT_PLUGIN, "Core Plug-ins"))
+    #result.append(_get_section(registry, SECT_PLUGIN, "Standard Plug-ins"))
     return "\n".join(result)
 
 
-def _get_section(registry, section, title, hdg_level1="#", hdg_level2="="):
-    """Build the manual part from topics matching that section."""
+def _get_section(registry, section, title, hdg_level1="#", hdg_level2="=",
+        output_dir=None):
+    """Build the manual part from topics matching that section.
+    
+    If output_dir is not None, topics are dumped into text files there
+    during processing, as well as being included in the return result.
+    """
     topics = sorted(registry.get_topics_for_section(section))
     lines = [title, hdg_level1 * len(title), ""]
 
@@ -93,12 +106,23 @@ def _get_section(registry, section, title, hdg_level1="#", hdg_level2="="):
         # check that topic match heading
         if topic != heading.lower():
             links_glue.append((topic, heading))
+        # dump the text if requested
+        if output_dir is not None:
+            out_file = bzrlib.osutils.pathjoin(output_dir, topic + ".txt")
+            _dump_text(out_file, help)
 
     # provide links glue for topics that don't match headings
     lines.extend([".. _%s: `%s`_" % i for i in links_glue])
     lines.append('')
 
     return "\n" + "\n".join(lines) + "\n"
+
+
+def _dump_text(filename, text):
+    """Dump text to filename."""
+    f =  open(filename, "w")
+    f.writelines(text)
+    f.close()
 
 
 def _get_commands_section(registry, title="Commands", hdg_level1="#",
